# serde_arrow

./: .gitignore  Cargo.toml  Changes.md  Contributing.md  Development.md  Implementation.md  License.md  Readme.md  arrow-versions.toml  clippy.toml  make.py  pyproject.toml  x.py
bench/: Cargo.toml
bench/benches/: impls.rs  serde_arrow_bench.rs
bench/benches/groups/: complex.rs  complex_common.rs  impls.rs  json_to_arrow.rs  mod.rs  primitives.rs  primitives_subset.rs
bench/benches/mini_serde_arrow/: static.rs
bench/examples/: serialize_nested_struct.rs  serialize_simple_struct.rs  serialize_simple_struct_arrow.rs
example/: Cargo.toml  _Cargo.toml
example/src/: main.rs
integration_tests/: Cargo.toml
integration_tests/src/: main.rs
integration_tests/tests/tests/: data_frames.rs  intervals.rs  mod.rs  temporal.rs  tensors.rs  utils.rs  views.rs
marrow/: Cargo.toml  Changes.md  Readme.md
marrow/src/: array.rs  bits.rs  datatypes.rs  error.rs  impl.rs  lib.rs  types.rs  view.rs
marrow/src/impl_arrow/: impl_api_37.rs  impl_api_47.rs  impl_api_53.rs  impl_api_base.rs  mod.rs
marrow/src/impl_arrow2/: impl.rs  mod.rs
marrow_integration/: Cargo.toml  LICENSE.arrow.txt  NOTICE.arrow.txt  Readme.md
marrow_integration/src/: lib.rs
marrow_integration/src/tests/: arrays.rs  struct_arrays.rs  union_arrays.rs  utils.rs  views.rs
serde_arrow/: Cargo.toml  Changes.md  Implementation.md  Quickstart.md  Readme.md  Status.md  build.rs
serde_arrow/benches/: arrow.rs  arrow2.rs  bench.rs
serde_arrow/benches/groups/: complex.rs  complex_common.rs  impls.rs  json_to_arrow.rs  mod.rs  primitives.rs  primitives_subset.rs
serde_arrow/benches/impls/: mod.rs
serde_arrow/benches/mini_serde_arrow/: dyn.rs  mod.rs  static.rs  utils.rs
serde_arrow/examples/: serialize_nested_struct.rs  serialize_simple_struct.rs  serialize_simple_struct_arrow.rs
serde_arrow/src/: array_builder.rs  arrow2_impl.rs  arrow_impl.rs  error.rs  impls.rs  lib.rs  marrow_impl.rs  schema.rs  serializer.rs  test.rs  utils.rs
serde_arrow/src/_impl/docs/: defs.rs  implementation.rs  quickstart.rs
serde_arrow/src/arrow/: api.rs  bytecode.rs  deserialization.rs  from_record_batch.rs  mod.rs  schema.rs  serialization.rs  sinks.rs  to_record_batch.rs  type_support.rs  write_ipc.rs
serde_arrow/src/arrow/test/: buffers.rs  mod.rs  sinks.rs
serde_arrow/src/arrow2/: api.rs  bytecode.rs  deserialization.rs  display.rs  from_chunk.rs  gen_display_tests.py  mod.rs  schema.rs  serialization.rs  sinks.rs  sources.rs  to_chunk.rs  type_support.rs  write_ipc.rs
serde_arrow/src/arrow2/schema/: editor.rs  mod.rs
serde_arrow/src/arrow2/sinks/: base.rs  builders.rs  mod.rs  primitive_sinks.rs  records_builder.rs  struct_sink.rs
serde_arrow/src/arrow2/sources/: builder.rs  mod.rs  primitive_sources.rs  record_source.rs  struct_source.rs
serde_arrow/src/arrow2/test/: generic_sources.rs  implementation_docs.rs  mod.rs  round_trip.rs  round_trip_array.rs  schema.rs  schema_events.rs  schema_mod.rs  sinks.rs  sources.rs  utils.rs
serde_arrow/src/arrow2_impl/: api.rs  array.rs  deserialization.rs  mod.rs  schema.rs  serialization.rs  test_deprecated_api.rs  type_support.rs
serde_arrow/src/arrow2_ops/: mod.rs  to_chunk.rs
serde_arrow/src/arrow_impl/: api.rs  array.rs  deserialization.rs  mod.rs  schema.rs  serialization.rs  test_deprecated_api.rs  type_support.rs
serde_arrow/src/arrow_ops/: from_record_batch.rs  mod.rs  to_ipc_writer.rs  to_record_batch.rs
serde_arrow/src/base/: error.rs  event.rs  mod.rs  sink.rs  source.rs
serde_arrow/src/event/: base.rs  event.rs  mod.rs  sink.rs  source.rs
serde_arrow/src/generic/: chrono.rs  mod.rs  schema.rs  sinks.rs  sources.rs
serde_arrow/src/internal/: array_builder.rs  arrow_schema.rs  chrono.rs  chrono_support.rs  config.rs  conversions.rs  decimal.rs  deserializer.rs  dsl.rs  error.rs  event.rs  generic.rs  generic_sinks.rs  generic_sources.rs  mod.rs  schema.rs  serializer.rs  sink.rs  source.rs  testing.rs  tracing.rs  utils.rs
serde_arrow/src/internal/arrow/: array.rs  array_view.rs  data_type.rs  mod.rs
serde_arrow/src/internal/bytecode/: bit_set.rs  buffers.rs  compiler.rs  interpreter.rs  mod.rs
serde_arrow/src/internal/common/: array_mapping.rs  buffers.rs  checks.rs  mod.rs  utils.rs
serde_arrow/src/internal/deserialization/: array_deserializer.rs  mod.rs  (+31 more)
serde_arrow/src/ng/: from_record_batch.rs  mod.rs  to_record_batch.rs  trace_schema.rs
serde_arrow/src/ops/: from_arrays.rs  from_record_batch.rs  mod.rs  to_arrays.rs  trace_schema.rs
serde_arrow/src/schema/: arrow2_support.rs  arrow_support.rs  mod.rs
serde_arrow/src/test/: api_chrono.rs  decimal_representations.rs  deserialize.rs  error.rs  event_sink.rs  events.rs  from_record_batch.rs  implementation_docs.rs  integration.rs  jiff.rs  mod.rs  schema_events.rs  schema_like.rs  schema_like_errors.rs  schema_tracing.rs  to_record_batch.rs  trace_schema.rs  utils.rs
serde_arrow/src/test_arrow/: from_record_batch.rs  integration.rs  mod.rs
serde_arrow/src/test_arrow2/: mod.rs  round_trip.rs  sinks.rs  sources.rs
serde_arrow/src/test_end_to_end/: issue_137.rs  issue_137_schema_like_from_arrow_schema.rs  issue_90.rs  mod.rs  test_deserialize.rs  test_docs_examples.rs  test_items.rs  test_strings.rs
serde_arrow/src/test_impls/: chrono.rs  dictionary.rs  examples.rs  issue_59_decimals.rs  issue_74.rs  issue_74_unknown_fields.rs  issue_79.rs  issue_79_declared_but_missing_fields.rs  issue_90_type_tracing.rs  json_values.rs  list.rs  macros.rs  map.rs  mod.rs  playground.rs  primitives.rs  struct.rs  tuple.rs  union.rs  utils.rs  wrappers.rs
serde_arrow/src/test_with_arrow/: issue_137_schema_like_from_arrow_schema.rs  issue_248_sliced_lists.rs  issue_248_slices_deserialization.rs  issue_35_preserve_metadata.rs  issue_90_top_level_nulls_in_structs.rs  items_wrapper.rs  mod.rs  schema_overwrites.rs  serializer_deserializer.rs
serde_arrow/src/util/: array_builder.rs  error.rs  hl.rs  mod.rs  outer_structure.rs  string_extractor.rs
serde_arrow/tests/: integration.rs
(+250 files in other folders)
