[workspace]
members = [
    "serde_arrow",
    "marrow",
    "serde_arrow_bench",
    "serde_arrow_example",
    "serde_arrow_integration",
    "marrow_integration",
]
default-members = ["serde_arrow", "marrow"]

resolver = "2"

[profile.bench]
debug = 0
codegen-units = 16
lto = "thin"

[workspace.lints.clippy]
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
expl_impl_clone_on_copy = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
get_unwrap = "warn"
indexing_slicing = "warn"
infallible_try_from = "warn"
invalid_upcast_comparisons = "warn"
iter_not_returning_iterator = "warn"
large_futures = "warn"
let_underscore_future = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
multiple_unsafe_ops_per_block = "warn"
panic = "warn"
rc_mutex = "warn"
string_slice = "warn"
todo = "warn"
unchecked_time_subtraction = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unused_result_ok = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(has_arrow)',
    'cfg(has_arrow_fixed_binary_support)',
    'cfg(has_arrow_bytes_view_support)',
    # arrow-version:insert:     'cfg(has_arrow_{version})',
    'cfg(has_arrow_59)',
    'cfg(has_arrow_58)',
    'cfg(has_arrow_57)',
    'cfg(has_arrow_56)',
    'cfg(has_arrow_55)',
    'cfg(has_arrow_54)',
    'cfg(has_arrow_53)',
]
