[package]
name = "example"
version = "0.1.0"
authors = ["Christopher Prohm <mail@cprohm.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow2 = {version = "0.15", features = ["io_ipc"] }

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

serde_arrow = { path = "../serde_arrow", features = ["arrow2"] }
