[package]
name = "example"
version = "0.1.0"
authors = ["Christopher Prohm <mail@cprohm.de>"]
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# arrow-version:replace: arrow = {{ version = "{version}", features = ["ipc"] }}
arrow = { version = "58", features = ["ipc"] }

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

# arrow-version:replace: serde_arrow = {{ path = "../serde_arrow", features = ["arrow-{version}"] }}
serde_arrow = { path = "../serde_arrow", features = ["arrow-58"] }