[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = {version = "51.0", features = ["ipc"] }

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

serde_arrow = { path = "../serde_arrow", features = ["arrow-51"] }
