[package]
edition = "2021"

name = "marrow"
version = "0.3.0-rc.1"
authors = ["Christopher Prohm <mail@cprohm.de>"]
description  = "Minimalist Arrow interop"
readme = "Readme.md"
repository = "https://github.com/chmp/serde_arrow"
license = "MIT"
keywords = ["arrow"]
rust-version = "1.83.0"

[package.metadata.docs.rs]
# arrow-version:replace: features = ["arrow-{version}", "serde"]
features = ["arrow-59", "serde"]

[features]
default = []

# Add Serde support
serde = ["dep:serde"]

# support for different arrow versions
# arrow-version:insert: arrow-{version} = ["dep:arrow-array-{version}", "dep:arrow-schema-{version}", "dep:arrow-data-{version}", "dep:arrow-buffer-{version}"]
arrow-59 = ["dep:arrow-array-59", "dep:arrow-schema-59", "dep:arrow-data-59", "dep:arrow-buffer-59"]
arrow-58 = ["dep:arrow-array-58", "dep:arrow-schema-58", "dep:arrow-data-58", "dep:arrow-buffer-58"]
arrow-57 = ["dep:arrow-array-57", "dep:arrow-schema-57", "dep:arrow-data-57", "dep:arrow-buffer-57"]
arrow-56 = ["dep:arrow-array-56", "dep:arrow-schema-56", "dep:arrow-data-56", "dep:arrow-buffer-56"]
arrow-55 = ["dep:arrow-array-55", "dep:arrow-schema-55", "dep:arrow-data-55", "dep:arrow-buffer-55"]
arrow-54 = ["dep:arrow-array-54", "dep:arrow-schema-54", "dep:arrow-data-54", "dep:arrow-buffer-54"]
arrow-53 = ["dep:arrow-array-53", "dep:arrow-schema-53", "dep:arrow-data-53", "dep:arrow-buffer-53"]

[dependencies]
bytemuck = { version = "1", default-features = false, features = ["derive"] }
half = { version = "2", default-features = false }

serde = { version = "1.0", default-features = false, features = ["std", "derive"], optional = true }

# arrow-version:insert: arrow-array-{version} = {{ package = "arrow-array", version = "{version}", optional = true, default-features = false }}
arrow-array-59 = { package = "arrow-array", version = "59", optional = true, default-features = false }
arrow-array-58 = { package = "arrow-array", version = "58", optional = true, default-features = false }
arrow-array-57 = { package = "arrow-array", version = "57", optional = true, default-features = false }
arrow-array-56 = { package = "arrow-array", version = "56", optional = true, default-features = false }
arrow-array-55 = { package = "arrow-array", version = "55", optional = true, default-features = false }
arrow-array-54 = { package = "arrow-array", version = "54", optional = true, default-features = false }
arrow-array-53 = { package = "arrow-array", version = "53", optional = true, default-features = false }

# arrow-version:insert: arrow-buffer-{version} = {{ package = "arrow-buffer", version = "{version}", optional = true, default-features = false }}
arrow-buffer-59 = { package = "arrow-buffer", version = "59", optional = true, default-features = false }
arrow-buffer-58 = { package = "arrow-buffer", version = "58", optional = true, default-features = false }
arrow-buffer-57 = { package = "arrow-buffer", version = "57", optional = true, default-features = false }
arrow-buffer-56 = { package = "arrow-buffer", version = "56", optional = true, default-features = false }
arrow-buffer-55 = { package = "arrow-buffer", version = "55", optional = true, default-features = false }
arrow-buffer-54 = { package = "arrow-buffer", version = "54", optional = true, default-features = false }
arrow-buffer-53 = { package = "arrow-buffer", version = "53", optional = true, default-features = false }

# arrow-version:insert: arrow-data-{version} = {{ package = "arrow-data", version="{version}", optional = true, default-features = false }}
arrow-data-59 = { package = "arrow-data", version="59", optional = true, default-features = false }
arrow-data-58 = { package = "arrow-data", version="58", optional = true, default-features = false }
arrow-data-57 = { package = "arrow-data", version="57", optional = true, default-features = false }
arrow-data-56 = { package = "arrow-data", version="56", optional = true, default-features = false }
arrow-data-55 = { package = "arrow-data", version="55", optional = true, default-features = false }
arrow-data-54 = { package = "arrow-data", version="54", optional = true, default-features = false }
arrow-data-53 = { package = "arrow-data", version="53", optional = true, default-features = false }

# arrow-version:insert: arrow-schema-{version} = {{ package = "arrow-schema", version = "{version}", optional = true, default-features = false }}
arrow-schema-59 = { package = "arrow-schema", version = "59", optional = true, default-features = false }
arrow-schema-58 = { package = "arrow-schema", version = "58", optional = true, default-features = false }
arrow-schema-57 = { package = "arrow-schema", version = "57", optional = true, default-features = false }
arrow-schema-56 = { package = "arrow-schema", version = "56", optional = true, default-features = false }
arrow-schema-55 = { package = "arrow-schema", version = "55", optional = true, default-features = false }
arrow-schema-54 = { package = "arrow-schema", version = "54", optional = true, default-features = false }
arrow-schema-53 = { package = "arrow-schema", version = "53", optional = true, default-features = false }
