[package]
# make sure this package is not accidentally published
publish = false

name = "marrow_integration"
version = "0.1.0"
edition = "2021"

[features]

# arrow-version:insert: arrow-{version} = ["marrow/arrow-{version}", "dep:arrow-array-{version}", "dep:arrow-schema-{version}"]
arrow-59 = ["marrow/arrow-59", "dep:arrow-array-59", "dep:arrow-schema-59"]
arrow-58 = ["marrow/arrow-58", "dep:arrow-array-58", "dep:arrow-schema-58"]
arrow-57 = ["marrow/arrow-57", "dep:arrow-array-57", "dep:arrow-schema-57"]
arrow-56 = ["marrow/arrow-56", "dep:arrow-array-56", "dep:arrow-schema-56"]
arrow-55 = ["marrow/arrow-55", "dep:arrow-array-55", "dep:arrow-schema-55"]
arrow-54 = ["marrow/arrow-54", "dep:arrow-array-54", "dep:arrow-schema-54"]
arrow-53 = ["marrow/arrow-53", "dep:arrow-array-53", "dep:arrow-schema-53"]

[dependencies]
marrow = { path = "../marrow", features = ["serde"]}

half = { version = "2", default-features = false }
serde_json = "1"
chrono = { version = "0.4", default-features = false }

# arrow-version:insert: arrow-array-{version} = {{ package = "arrow-array", version="{version}", optional = true, default-features = false }}
arrow-array-59 = { package = "arrow-array", version="59", optional = true, default-features = false }
arrow-array-58 = { package = "arrow-array", version="58", optional = true, default-features = false }
arrow-array-57 = { package = "arrow-array", version="57", optional = true, default-features = false }
arrow-array-56 = { package = "arrow-array", version="56", optional = true, default-features = false }
arrow-array-55 = { package = "arrow-array", version="55", optional = true, default-features = false }
arrow-array-54 = { package = "arrow-array", version="54", optional = true, default-features = false }
arrow-array-53 = { package = "arrow-array", version = "53.3.0", optional = true, default-features = false }

# arrow-version:insert: arrow-schema-{version} = {{ package = "arrow-schema", version = "{version}", optional = true, default-features = false, features = ["serde"] }}
arrow-schema-59 = { package = "arrow-schema", version = "59", optional = true, default-features = false, features = ["serde"] }
arrow-schema-58 = { package = "arrow-schema", version = "58", optional = true, default-features = false, features = ["serde"] }
arrow-schema-57 = { package = "arrow-schema", version = "57", optional = true, default-features = false, features = ["serde"] }
arrow-schema-56 = { package = "arrow-schema", version = "56", optional = true, default-features = false, features = ["serde"] }
arrow-schema-55 = { package = "arrow-schema", version = "55", optional = true, default-features = false, features = ["serde"] }
arrow-schema-54 = { package = "arrow-schema", version = "54", optional = true, default-features = false, features = ["serde"] }
arrow-schema-53 = { package = "arrow-schema", version = "53.3.0", optional = true, default-features = false, features = ["serde"] }
